required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (future 6.0.2, SVN branch-6-0):
---------------------------

- WFS Quote Escape issue (#4087)

- Raster layer fails to be drawn if the window is less than half a pixel (#4172)

- Fixed SLD with FILTER doesn't apply properly to database layers (#4112)

- Fixed a problem with calls to labelInImage() (maplabel.c) when label gutter
  and label buffers are both used (#3303). Also changed the usage around that
  function to make it easier to understand. At a result the
  "labelcache_map_edge_buffer" processing option (i.e. gutter) can be provided
  as a positive or negative value. (closes #1355 too)

- Added label->style markers to collision detection (#4133)

- Fixed single pixel coverages in WCS 2.0 (#4110)

- Fixed subsetting in WCS 2.0 (#4099)

- Fixed segfault when calling classObj::updateFromString() with SYMBOL (#4062)

- fix rendering offset on thick GD lines (#3962)

- fix segfault on join with postgresql tables (#4074)

- Fixed Python Mapscript does not write COLOR to reference map (#4042)
 
- Fixed cannot add a style to a label in PHP/SWIG Mapscript (#4038) 

- Add missing support for outputFormat in WFS GetFeature POST XML requests (#4052)

- Fixed schema validity issue for WCS 1.1 GetCoverage responses (#4047)

- fix centroid geomtransform parser (#4029)

- PHP MapScript is missing many styleObj properties (#3901)

- Added GEOMTRANSFORM in writeStyle function

- WCS 1.0: Fix crash with some _rangeset_axes values (#4020)

- Changed msDrawVectorLayer() not to cache shapes if attribute binding is present after the first style (#3976)

- Fix mapscript to build when TRUE macro is not defined (#3926)
